# Multi-Window-Display

./: CMakeLists.txt  MyWindow.cpp  MyWindow.h  README.md  main.cpp
Debug/: Multi_ScreenDisplay
simple_way/: Makefile  fake_splitScreen  fake_splitScreen.cpp
